--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             margin: 15px 0;
         }
         .image img {
-            max-width: 600px; /* Fixed size for both images */
+            max-width: 600px; 
             width: 100%;
             height: auto;
             border: 1px solid #ddd;
