--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="analysis critical-analysis">
                     <h3>Critical Analysis</h3>
                     <p class="dark-blue data-issues"><strong>Data Issues:</strong></p>
-                    <p><strong>Overlapping Data Types:</strong> Combining issues by age group and days open in a stacked bar with a line overlay complicates interpretation.</p>
+                    <p><strong>Overlapping Data Types:</strong> Combining issues by number and days open in a stacked bar with a line overlay complicates interpretation.</p>
                     <p><strong>Inconsistent Scales:</strong> Mixing scales on the y-axis for issues and days open risks confusion.</p>
                     
                     <p class="dark-blue idiom-issues"><strong>Idiom Issues:</strong></p>
